mengubah file style.css

--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ section h2{
 .instagram{
     bottom: 7%;
 }
-.whatsapp img, .facebook img, .telegram img{
+.whatsapp img, .instagram img, .twitter img{
     width: 100%;
 }
 
