mengubah isi file style.css

--- a/style.css
+++ b/style.css
@@ -546,7 +546,7 @@ footer p a{
     }
 
     footer{
-        background-color: rgb(240, 240, 240);
+        background-color: #fff;
         font-size: 25px;
     }
 }
